--- a/frontend/src/assets/css/addcards.css
+++ b/frontend/src/assets/css/addcards.css
@@ -3,16 +3,16 @@
     color: #fff !important;
 }
 
-.card ::v-deep .v-card-item .v-icon {
+.card :deep(.v-card-item .v-icon) {
     color: var(--palette-orange);
     font-size: 2.5rem;
 }
 
-.card ::v-deep .v-messages__message {
+.card :deep(.v-messages__message) {
     color: #fff;
 }
 
-.card ::v-deep .v-btn {
+.card :deep(.v-btn) {
     background-color: var(--palette-orange);
     color: #000;
 }
